2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Use numeric constant for |{content_mode}|
	instead of string constant for |{content_model_flag}|.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Add the name of the attribute
	to the "duplicate attribute" error.

2007-07-17  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Return the |class| node list.

2007-07-17  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Return the |id| node list.

	* HTML.pm.src: A typo is fixed.

2007-07-16  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Drop wrong |level => 'error'| specification
	from "in HTML:xml:lang" error.  Character position
	is now the last part of the error type in the URI error
	description.  Report "unsupported" status for language
	tags, media queries, script codes, and style sheets.

2007-07-16  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Report error if |xml:lang|
	in HTML, |lang| in XML, |xmlns| in XML, and |meta| |charset|
	in XML.

	* NanoDOM.pm (Attr.owner_document): New attribute.

2007-07-16  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: The character immediately following
	a bare |hcro| was discarded.  Fix handling of
	entity references in attribute values.

2007-07-16  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (main and trailin end phases): Token
	types |DOCTYPE|, |comment|, |end-of-file|, and |<html>| are 
	factored out.  Error types |in html:#DOCTYPE|
	and |after html:#DOCTYPE| are merged
	into |DOCTYPE in the middle|.  |</frameset>|
	in fragment parsing mode changed the
	insertion mode.

2007-07-16  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |$phase| has been removed; The |trailing end|
	phase is now an insertion mode.  Treatments for white
	space character tokens were incorrect for some
	insertion modes.  An old |meta| case was not removed.

2007-07-16  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |meta| charset declaration extraction
	implemented (but changing the encoding is not yet:-).
