@@ -1,6 +1,6 @@
 package Whatpm::HTML;
 use strict;
-our $VERSION=do{my @r=(q$Revision: 1.40 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
+our $VERSION=do{my @r=(q$Revision: 1.41 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
 
 ## ISSUE:
 ## var doc = implementation.createDocument (null, null, null);
@@ -3557,6 +3557,7 @@ sub _tree_construction_main ($) {
               } elsif ($self->{insertion_mode} eq 'in head noscript') {
                 !!!parse-error (type => 'in noscript:noscript');
                 ## Ignore the token
+                !!!next-token;
                 redo B;
               } else {
                 #
@@ -4043,6 +4044,7 @@ sub _tree_construction_main ($) {
                      }->{$token->{tag_name}}) {
               !!!parse-error (type => 'unmatched end tag:'.$token->{tag_name});
               ## Ignore the token
+              !!!next-token;
               redo B;
             } else {
               #
@@ -5472,4 +5474,4 @@ sub get_inner_html ($$$) {
 } # get_inner_html
 
 1;
-# $Date: 2007/07/21 05:36:50 $
+# $Date: 2007/07/21 06:04:07 $
