@@ -1,7 +1,7 @@
 1..774
 # Running under perl version 5.008007 for linux
-# Current time local: Sat Jul 21 14:33:26 2007
-# Current time GMT:   Sat Jul 21 05:33:26 2007
+# Current time local: Sat Jul 21 14:57:30 2007
+# Current time GMT:   Sat Jul 21 05:57:30 2007
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
@@ -876,47 +876,47 @@ ok 585
 ok 586
 ok 587
 ok 588
-not ok 589
-# Test 589 got: "2" (t/HTML-tree.t at line 141 fail #295)
-#     Expected: "1" (Parse error: <!DOCTYPE HTML><ul></body>; 1:26:not closed:ul, 1:26:not closed:ul;ul not closed)
+ok 589
 ok 590
-not ok 591
-# Test 591 got: "3" (t/HTML-tree.t at line 141 fail #296)
-#     Expected: "1" (Parse error: <!DOCTYPE HTML><ul><li></body>; 1:30:not closed:ul, 1:30:after body:/li, 1:30:not closed:ul;ul not closed)
+ok 591
 ok 592
-not ok 593
-# Test 593 got: "2" (t/HTML-tree.t at line 141 fail #297)
-#     Expected: "1" (Parse error: <!DOCTYPE HTML><dl></body>; 1:26:not closed:dl, 1:26:not closed:dl;dl not closed)
+ok 593
 ok 594
 not ok 595
-# Test 595 got: "3" (t/HTML-tree.t at line 141 fail #298)
-#     Expected: "1" (Parse error: <!DOCTYPE HTML><dl><dt></body>; 1:30:not closed:dl, 1:30:after body:/dt, 1:30:not closed:dl;dl not closed)
+# Test 595 got: "2" (t/HTML-tree.t at line 141 fail #298)
+#     Expected: "1" (Parse error: <!DOCTYPE HTML><ul></body>; 1:26:not closed:ul, 1:26:not closed:ul;ul not closed)
 ok 596
 not ok 597
 # Test 597 got: "3" (t/HTML-tree.t at line 141 fail #299)
-#     Expected: "1" (Parse error: <!DOCTYPE HTML><dl><dd></body>; 1:30:not closed:dl, 1:30:after body:/dd, 1:30:not closed:dl;dl not closed)
+#     Expected: "1" (Parse error: <!DOCTYPE HTML><ul><li></body>; 1:30:not closed:ul, 1:30:after body:/li, 1:30:not closed:ul;ul not closed)
 ok 598
 not ok 599
-# Test 599 got: "1" (t/HTML-tree.t at line 141 fail #300)
-#     Expected: "0" (Parse error: <!DOCTYPE HTML><p></body>; 1:25:after body:/p;)
+# Test 599 got: "2" (t/HTML-tree.t at line 141 fail #300)
+#     Expected: "1" (Parse error: <!DOCTYPE HTML><dl></body>; 1:26:not closed:dl, 1:26:not closed:dl;dl not closed)
 ok 600
 not ok 601
-# Test 601 got: "2" (t/HTML-tree.t at line 141 fail #301)
-#     Expected: "1" (Parse error: <!DOCTYPE HTML><table><tr><td></body>; 1:37:unmatched end tag:body, 1:37:not closed:table;table not closed)
+# Test 601 got: "3" (t/HTML-tree.t at line 141 fail #301)
+#     Expected: "1" (Parse error: <!DOCTYPE HTML><dl><dt></body>; 1:30:not closed:dl, 1:30:after body:/dt, 1:30:not closed:dl;dl not closed)
 ok 602
 not ok 603
-# Test 603 got: "2" (t/HTML-tree.t at line 141 fail #302)
-#     Expected: "1" (Parse error: <!DOCTYPE HTML><table><tr><th></body>; 1:37:unmatched end tag:body, 1:37:not closed:table;table not closed)
+# Test 603 got: "3" (t/HTML-tree.t at line 141 fail #302)
+#     Expected: "1" (Parse error: <!DOCTYPE HTML><dl><dd></body>; 1:30:not closed:dl, 1:30:after body:/dd, 1:30:not closed:dl;dl not closed)
 ok 604
 not ok 605
-# Test 605 got: "2" (t/HTML-tree.t at line 141 fail #303)
-#     Expected: "1" (Parse error: <!DOCTYPE HTML><table><thead><tr><td></body>; 1:44:unmatched end tag:body, 1:44:not closed:table;table not closed)
+# Test 605 got: "1" (t/HTML-tree.t at line 141 fail #303)
+#     Expected: "0" (Parse error: <!DOCTYPE HTML><p></body>; 1:25:after body:/p;)
 ok 606
-ok 607
+not ok 607
+# Test 607 got: "2" (t/HTML-tree.t at line 141 fail #304)
+#     Expected: "1" (Parse error: <!DOCTYPE HTML><table><tr><td></body>; 1:37:unmatched end tag:body, 1:37:not closed:table;table not closed)
 ok 608
-ok 609
+not ok 609
+# Test 609 got: "2" (t/HTML-tree.t at line 141 fail #305)
+#     Expected: "1" (Parse error: <!DOCTYPE HTML><table><tr><th></body>; 1:37:unmatched end tag:body, 1:37:not closed:table;table not closed)
 ok 610
-ok 611
+not ok 611
+# Test 611 got: "2" (t/HTML-tree.t at line 141 fail #306)
+#     Expected: "1" (Parse error: <!DOCTYPE HTML><table><thead><tr><td></body>; 1:44:unmatched end tag:body, 1:44:not closed:table;table not closed)
 ok 612
 ok 613
 ok 614
@@ -924,15 +924,15 @@ ok 615
 ok 616
 ok 617
 ok 618
-not ok 619
-# Test 619 got: "1" (t/HTML-tree.t at line 141 fail #310)
-#     Expected: "3" (Parse error: <!DOCTYPE HTML><h1><a><h2>; 1:26:not closed:h2;h1 not closed, a not closed, h2 not closed)
+ok 619
 ok 620
 ok 621
 ok 622
 ok 623
 ok 624
-ok 625
+not ok 625
+# Test 625 got: "1" (t/HTML-tree.t at line 141 fail #313)
+#     Expected: "3" (Parse error: <!DOCTYPE HTML><h1><a><h2>; 1:26:not closed:h2;h1 not closed, a not closed, h2 not closed)
 ok 626
 ok 627
 ok 628
@@ -1032,7 +1032,6 @@ ok 721
 ok 722
 ok 723
 ok 724
-# t/tree-test-2.dat
 ok 725
 ok 726
 ok 727
@@ -1065,6 +1064,7 @@ ok 753
 ok 754
 ok 755
 ok 756
+# t/tree-test-2.dat
 ok 757
 ok 758
 ok 759
@@ -1083,3 +1083,35 @@ ok 771
 ok 772
 ok 773
 ok 774
+ok 775
+ok 776
+ok 777
+ok 778
+ok 779
+ok 780
+ok 781
+ok 782
+ok 783
+ok 784
+ok 785
+ok 786
+ok 787
+ok 788
+ok 789
+ok 790
+ok 791
+ok 792
+ok 793
+ok 794
+ok 795
+ok 796
+ok 797
+ok 798
+ok 799
+ok 800
+ok 801
+ok 802
+ok 803
+ok 804
+ok 805
+ok 806
