@@ -1,5 +1,10 @@
 2007-07-21  Wakaba  <wakaba@suika.fam.cx>
 
+	* tree-test-1.dat: More tests for ignoring some tokens
+	are added.
+
+2007-07-21  Wakaba  <wakaba@suika.fam.cx>
+
 	* HTML-tokenizer.t: Set content model flag in new syntax.
 
 2007-07-16  Wakaba  <wakaba@suika.fam.cx>
