@@ -1,5 +1,9 @@
 2007-07-21  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm.src: Two |!!!next-token|s were missing.
+
+2007-07-21  Wakaba  <wakaba@suika.fam.cx>
+
 	* HTML.pm.src: Use numeric constant for |{content_mode}|
 	instead of string constant for |{content_model_flag}|.
 
